<resources>
    <string name="app_name">Datos Seguros</string>
    <string name="title_contrasenas">Contraseñas</string>
    <string name="title_cuentas">Cuentas Bancarias</string>
    <string name="title_tarjetas">Tarjetas Bancarias</string>
    <string name="title_notas">Notas</string>
    <string name="title_tema">Temas</string>
    <string name="title_activity_add">Agregar Datos</string>
    <string name="buttonGuardar">Guardar</string>
    <string name="sin_lista">No tiene información almacenada</string>
    <string name="perfil">Actualizar Perfil</string>
    <string name="cerrarSesion">Cerrar Sesión</string>
    <string name="exportar_importar">Exportar/Importar Datos</string>
    <string name="menu_ajustes">Ajustes</string>
    <string name="eliminar_cuenta">Borrar Datos</string>
    <string name="tema">Cambiar Tema</string>


    <!-- Cardview contraseña -->
    <string name="servicio">Servicio:</string>
    <string name="usuario">Usuario:</string>
    <string name="contrasena">Contraseña:</string>
    <string name="vencimiento">Vencimiento:</string>

    <!-- Cardview banco -->
    <string name="titular">Titular:</string>
    <string name="banco">Banco:</string>
    <string name="numeroCuenta">Cuenta N°:</string>
    <string name="documentoNumero">Documento N°:</string>
    <string name="cedula">Cédula:</string>
    <string name="tipodeCuenta">Tipo:</string>
    <string name="telefono">Telefono:</string>
    <string name="correoCuenta">Correo:</string>

    <!-- Cardview tarjeta -->
    <string name="numeroTarjeta">Tarjeta N°:</string>
    <string name="numeroCVV">CVV N°:</string>
    <string name="tipodeTarjeta">Tipo Tarjeta:</string>
    <string name="clavedeTarjeta">Clave:</string>

    <!-- Add Constraseña -->
    <string name="caducidad">Caducidad de la contraseña:</string>
    <string name="treinta">30 días</string>
    <string name="sesenta">60 días</string>
    <string name="noventa">90 días</string>
    <string name="cientoVeinte">120 días</string>
    <string name="otro">Otro</string>
    <string name="ingreseTiempo">Ingrese N° de días:</string>
    <string name="indeterminado">Indeterminado</string>

    <!-- Add Cuenta -->
    <string name="cuentaAhorro">Ahorro</string>
    <string name="cuentaCorriente">Corriente</string>

    <!-- Add Tarjeta -->
    <string name="tarjetaMaestro">Maestro</string>
    <string name="tarjetaVisa">Visa</string>
    <string name="tarjetaMaster">Mastercard</string>
    <string name="otroTarjeta">Ingrese tipo de Tarjeta</string>

    <!-- Add Nota -->
    <string name="tituloNota">Título de la nota</string>
    <string name="contenidoNota">Ingrese su nota</string>

    <!-- Menu Contrasena -->
    <string name="copiar">Copiar</string>
    <string name="compartir">Compartir</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="ultimosPass">Últimas contraseñas</string>

    <!-- Copiar Contrasena -->
    <string name="inicSesion">Iniciar Sesión</string>

    <!-- Copiar Contrasena -->
    <string name="pregunta">¿No tienes cuenta?</string>

    <!-- Copiar Tarjeta -->
    <string name="registrate">Regístrate</string>

    <!-- Copiar Nota -->
    <string name="cuentaGoogle">usa tu cuenta Google</string>
    <string name="olvidoPass">Si olvido su contraseña presione</string>
    <string name="aqui">aquí</string>

    <!-- Iniciar Sesion -->
    <string name="usuarioCorreo">Correo electrónico:</string>
    <string name="repetirContrasena">Ingrese de nuevo la contraseña:</string>
    <string name="registrar">Registrar</string>
    <string name="bienvenido">Bienvenido</string>


    <!-- Registrar -->
    <string name="acerca">Información de App</string>
    <string name="acerca_title">Desarrollado por&#8230;</string>

    <!-- Acerca -->
    <string name="titleMiPerfil">¿Qué desea actualizar?</string>
    <string name="updateEmail">Actualizar Correo</string>
    <string name="updatePass">Actualizar Contraseña</string>
    <string name="updateAlmacenamiento">Lugar de Almacenamiento</string>

    <!-- Mi Perfil -->
    <string name="btUpdate">Actualizar</string>
    <string name="nuevoEmail">Ingrese nueva dirección de correo</string>
    <string name="repetirEmail">Repita la dirección de correo</string>
    <string name="nuevoPass">Ingrese nueva Contraseña</string>
    <string name="repetirPass">Repita la Contraseña</string>
    <string name="radioNube">Nube</string>
    <string name="radioDispositivo">Dispositivo</string>
    <string name="updateBloqueo">Bloqueo de Aplicación</string>
    <string name="radioHuella">Huella</string>
    <string name="radioPIN">PIN</string>
    <string name="radiosinbloqueo">Sin Bloqueo</string>
    <string name="hello_blank_fragment">Bienvenido</string>
    <string-array name="copiarContrasena">
        <item>Servicio</item>
        <item>Usuario</item>
        <item>Contraseña</item>
    </string-array>
    <string-array name="copiarBanco">
        <item>Titular</item>
        <item>Banco</item>
        <item>N° Cuenta</item>
        <item>Documento Identidad</item>
        <item>Tipo</item>
        <item>Telefono</item>
        <item>Correo</item>
    </string-array>
    <string-array name="copiarTarjeta">
        <item>Titular</item>
        <item>Banco</item>
        <item>N° Tarjeta</item>
        <item>CVV</item>
        <item>Vencimiento</item>
        <item>Documento Identidad</item>
        <item>Clave</item>
        <item>Tipo</item>
    </string-array>

    <!-- Bloqueo -->
    <string-array name="copiarNota">
        <item>Título</item>
        <item>Contenido</item>
    </string-array>


    <string name="ingresePIN">Ingrese PIN Nuevo</string>
    <string name="ingresePINRespaldo">Ingrese PIN de Respaldo</string>
    <string name="pin">PIN:</string>
    <string name="repitaPIN">Repita PIN:</string>
    <string name="buttonAceptar">Aceptar</string>
    <string name="pinRespaldo">Acceder con PIN</string>


    <string name="explicacion_importar_exportar">Sólo puede importar/exportar los datos almacenados en el Dispositivo.</string>
    <string name="explicacion_escoger_almacenamiento">Puede guardar algunos datos en la nube y otros en su dispositivo. \nEscoja con cuál desea inciar</string>

    <!-- Tema -->
    <string name="button_amarillo">Amarillo</string>
    <string name="button_rojo">Rojo</string>
    <string name="button_marron">Marrón</string>
    <string name="button_lila">Lila</string>
    <string name="title_activity_settings">Ajustes</string>

    <!-- Preference Titles -->
    <string name="datos_personales">Datos Personales</string>
    <string name="preferencias">Preferencias</string>

    <!-- Prefrencias Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="tipo_bloqueo_title">Bloqueo de la Aplicación</string>
    <string name="tipo_almacenamiento_title">Almacenamiento en la Nube</string>
    <string name="almacenamiento_summary_on">La información se almacenará en la nube</string>
    <string name="almacenamiento_summary_off">La información se almacenará en su dispositivo</string>
    <string name="tema_summary">Escoja el tema de la aplicación</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>

    <!-- Borrar Datos Preferences -->
    <string name="text_borrar_datos">Se eliminará la información almacenada en la nube y/o dispositivo. Esta acción no se puede deshacer.</string>
    <string name="btn_borrar_datos_nube">Borrar Datos en la Nube</string>
    <string name="btn_borrar_datos_dispositivo">Borrar Datos en el Dispositivo</string>
    <string name="btn_borrar_datos_todos">Borrar todos los Datos</string>
</resources>
