<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.AddTarjetaFragment"
    android:background="#009688">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <EditText
            android:id="@+id/etTitularTarjeta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/titular"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etTarjeta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/numeroTarjeta"
            android:inputType="number"
            android:maxLength="16"/>

        <EditText
            android:id="@+id/etnumeroCVV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/numeroCVV"
            android:inputType="number"
            android:maxLength="3"/>

        <EditText
            android:id="@+id/etCedulaTarjeta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/cedula"
            android:inputType="number" />

        <TextView
            android:id="@+id/etTipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/tipodeCuenta"
            android:textSize="18dp"
            android:paddingTop="24dp"/>

        <RadioGroup
            android:id="@+id/radioTarjeta"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RadioButton
                android:id="@+id/radioButtonVisa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tarjetaVisa" />

            <RadioButton
                android:id="@+id/radioButtonMaster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tarjetaMaster" />

            <RadioButton
                android:id="@+id/radioButtonOtroTarjeta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/otro" />
        </RadioGroup>

        <EditText
            android:id="@+id/editTextOtroTarjeta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/otroTarjeta"
            android:visibility="gone"/>

        <Button
            android:id="@+id/guardarTarjeta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="64dp"
            android:text="@string/buttonGuardar" />

    </LinearLayout>

</FrameLayout>