<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:fragment="com.skysam.datossegurosFirebaseFinal.settings.SettingsActivity$PreferenciasFragment"
        app:icon="@drawable/ic_preference_24"
        app:key="preferencias_header"
        app:title="@string/preferencias"/>

    <PreferenceCategory app:title="Perfil">
        <Preference
            app:fragment="com.skysam.datossegurosFirebaseFinal.settings.SettingsActivity$DatosPersonalesFragment"
            app:icon="@drawable/ic_datos_personales_24"
            app:key="datos_personales_header"
            app:title="@string/datos_personales" />

        <Preference
            app:fragment="com.skysam.datossegurosFirebaseFinal.settings.SettingsActivity$BorrarDatosFragment"
            app:icon="@drawable/ic_delete_forever_24"
            app:key="borrar_datos_header"
            app:title="@string/eliminar_cuenta" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/acerca">
        <Preference
            app:key="about"
            app:icon="@drawable/ic_info_24"
            app:title="@string/acerca_title">
        </Preference>

        <PreferenceScreen
            app:key="name_version"/>
    </PreferenceCategory>

</PreferenceScreen>