<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentsEditar.EditarTarjetaFragment"
    android:background="@color/colorBackgroundEditar">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/etTitularTarjetaEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/titular"
            android:inputType="textPersonName"
            android:textColor="#fff"
            android:textColorHint="#fff" />

        <EditText
            android:id="@+id/etBancoTarjetaEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etTitularTarjetaEditar"
            android:ems="10"
            android:hint="@string/banco"
            android:inputType="textPersonName"
            android:textColor="#fff"
            android:textColorHint="#fff" />

        <EditText
            android:id="@+id/etTarjetaEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etBancoTarjetaEditar"
            android:ems="10"
            android:hint="@string/numeroTarjeta"
            android:inputType="number"
            android:maxLength="16"
            android:textColor="#fff"
            android:textColorHint="#fff" />

        <ProgressBar
            android:id="@+id/progressBarEditarTarjeta"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_below="@id/etTarjetaEditar"
            android:indeterminateTint="@color/colorPrimaryDark"
            android:visibility="gone" />

        <EditText
            android:id="@+id/etnumeroCVVEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etTarjetaEditar"
            android:ems="10"
            android:hint="@string/numeroCVV"
            android:inputType="number"
            android:maxLength="3"
            android:textColor="#fff"
            android:textColorHint="#fff" />

        <EditText
            android:id="@+id/etVencimientoEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etnumeroCVVEditar"
            android:ems="10"
            android:hint="@string/vencimiento"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:focusable="false"/>

        <EditText
            android:id="@+id/etCedulaTarjetaEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etVencimientoEditar"
            android:ems="10"
            android:hint="@string/cedula"
            android:inputType="number"
            android:textColor="#fff"
            android:textColorHint="#fff" />

        <EditText
            android:id="@+id/etClaveTarjetaEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etCedulaTarjetaEditar"
            android:ems="10"
            android:hint="@string/clavedeTarjeta"
            android:inputType="number"
            android:maxLength="6"
            android:textColor="#fff"
            android:textColorHint="#fff" />

        <TextView
            android:id="@+id/etTipoEditar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etClaveTarjetaEditar"
            android:ems="10"
            android:text="@string/tipodeCuenta"
            android:textSize="18sp"
            android:paddingTop="24dp"
            android:textColor="#fff"
            android:textColorHint="#fff"/>

        <RadioGroup
            android:id="@+id/radioTarjetaEditar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/etTipoEditar">

            <RadioButton
                android:id="@+id/radioButtonMaestroEditar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="#fff"
                android:text="@string/tarjetaMaestro"
                android:textColor="#fff" />

            <RadioButton
                android:id="@+id/radioButtonVisaEditar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="#fff"
                android:text="@string/tarjetaVisa"
                android:textColor="#fff" />

            <RadioButton
                android:id="@+id/radioButtonMasterEditar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="#fff"
                android:text="@string/tarjetaMaster"
                android:textColor="#fff" />

            <RadioButton
                android:id="@+id/radioButtonOtroTarjetaEditar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="#fff"
                android:text="@string/otro"
                android:textColor="#fff" />
        </RadioGroup>

        <EditText
            android:id="@+id/editTextOtroTarjetaEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/radioTarjetaEditar"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/otroTarjeta"
            android:visibility="gone"
            android:textColor="#fff"
            android:textColorHint="#fff"/>

        <Button
            android:id="@+id/guardarTarjetaEditar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextOtroTarjetaEditar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="48dp"
            android:text="@string/buttonGuardar" />

    </RelativeLayout>
    </ScrollView>

</FrameLayout>