<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentsEditar.EditarContrasenaFragment"
    android:background="@color/colorBackgroundEditar">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etServicioEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/servicio"
            android:inputType="textPersonName"
            android:textColor="#fff"
            android:textColorHint="#fff" />

        <EditText
            android:id="@+id/etUsuarioEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etServicioEditar"
            android:ems="10"
            android:hint="@string/usuario"
            android:inputType="textPersonName"
            android:textColor="#fff"
            android:textColorHint="#fff" />

        <EditText
            android:id="@+id/etContrasenaEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etUsuarioEditar"
            android:ems="10"
            android:hint="@string/contrasena"
            android:inputType="textPersonName"
            android:textColor="#fff"
            android:textColorHint="#fff" />

            <ProgressBar
                android:id="@+id/progressBarEditarContrasena"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_below="@id/etContrasenaEditar"
                android:indeterminateTint="@color/colorPrimaryDark"
                android:visibility="gone" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etContrasenaEditar"
            android:text="@string/caducidad"
            android:textSize="18sp"
            android:paddingTop="24dp"
            android:textColor="#fff"
            android:textColorHint="#fff"/>

        <RadioGroup
            android:id="@+id/radioDiasEditar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/textView2">

            <RadioButton
                android:id="@+id/radioButton30Editar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="#fff"
                android:text="@string/treinta"

                android:textColor="#fff"
                android:textColorHighlight="#fff"
                android:textColorLink="@color/colorAccent" />

            <RadioButton
                android:id="@+id/radioButton60Editar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="#fff"
                android:text="@string/sesenta"
                android:textColor="#fff" />

            <RadioButton
                android:id="@+id/radioButton90Editar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="#fff"
                android:text="@string/noventa"
                android:textColor="#fff" />

            <RadioButton
                android:id="@+id/radioButton120Editar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="#fff"
                android:text="@string/cientoVeinte"
                android:textColor="#fff" />

            <RadioButton
                android:id="@+id/radioButtonIndeterminadoEditar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="#fff"
                android:text="@string/indeterminado"
                android:textColor="#fff" />

            <RadioButton
                android:id="@+id/radioButtonOtroEditar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="#fff"
                android:text="@string/otro"
                android:textColor="#fff" />
        </RadioGroup>

        <EditText
            android:id="@+id/etIngreseOtroEditar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/radioDiasEditar"
            android:ems="10"
            android:hint="@string/ingreseTiempo"
            android:inputType="number"
            android:visibility="gone"
            android:textColor="#fff"
            android:textColorHint="#fff"/>

        <Button
            android:id="@+id/editarContrasena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etIngreseOtroEditar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="48dp"
            android:text="@string/buttonGuardar" />


        </RelativeLayout>
    </ScrollView>

</FrameLayout>