<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/perfil"
        android:id="@+id/menu_perfil"
        />

    <item
        android:title="@string/cerrarSesion"
        android:id="@+id/menu_cerrar_sesion"
        />

    <item
        android:title="@string/acerca"
        android:id="@+id/menu_acerca"
        />

    <item
        android:title="@string/acerca"
        android:id="@+id/menu_buscar"
        app:showAsAction="always"
        android:icon="@drawable/ic_buscar"
        app:actionViewClass="android.widget.SearchView"/>

    <item
        android:title="@string/acerca"
        android:id="@+id/menu_bloqueo"
        app:showAsAction="always"
        android:icon="@drawable/ic_bloqueo"
        />


</menu>