<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentsEditar.EditarCuentasFragment"
    android:background="@color/colorBackgroundEditar">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etTitularEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/titular"
            android:inputType="textPersonName"
            android:textColor="#fff"
            android:textColorHint="#fff" />

        <EditText
            android:id="@+id/etBancoEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etTitularEditar"
            android:ems="10"
            android:hint="@string/banco"
            android:inputType="textPersonName"
            android:textColor="#fff"
            android:textColorHint="#fff" />

        <EditText
            android:id="@+id/etnumeroCuentaEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etBancoEditar"
            android:ems="10"
            android:hint="@string/numeroCuenta"
            android:inputType="number"
            android:maxLength="20"
            android:textColor="#fff"
            android:textColorHint="#fff" />

            <ProgressBar
                android:id="@+id/progressBarEditarCuenta"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_below="@id/etnumeroCuentaEditar"
                android:indeterminateTint="@color/colorPrimaryDark"
                android:visibility="gone" />

        <LinearLayout
            android:id="@+id/layoutEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etnumeroCuentaEditar"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinnerTipoDocumentoEditar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"></Spinner>

            <EditText
                android:id="@+id/etCedulaCuentaEditar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/documentoNumero"
                android:inputType="number"
                android:textColor="#fff"
                android:textColorHint="#fff" />
        </LinearLayout>


        <EditText
            android:id="@+id/etTelefonoEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutEditar"
            android:ems="10"
            android:hint="@string/telefono"
            android:inputType="number"
            android:maxLength="11"
            android:textColor="#fff"
            android:textColorHint="#fff" />

        <EditText
            android:id="@+id/etCorreoCuentaEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etTelefonoEditar"
            android:ems="10"
            android:hint="@string/correoCuenta"
            android:inputType="textEmailAddress"
            android:textColor="#fff"
            android:textColorHint="#fff" />

        <TextView
            android:id="@+id/etTipoEditar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etCorreoCuentaEditar"
            android:ems="10"
            android:text="@string/tipodeCuenta"
            android:textSize="18sp"
            android:paddingTop="24dp"
            android:textColor="#fff"
            android:textColorHint="#fff"/>

        <RadioGroup
            android:id="@+id/radioEditar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/etTipoEditar"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonAhorroEditar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="#fff"
                android:text="@string/cuentaAhorro"
                android:textColor="#fff" />

            <RadioButton
                android:id="@+id/radioButtonCorrienteEditar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="#fff"
                android:text="@string/cuentaCorriente"
                android:textColor="#fff" />

        </RadioGroup>

        <Button
            android:id="@+id/guardarCuentaEditar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/radioEditar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="48dp"
            android:text="@string/buttonGuardar" />
        </RelativeLayout>
    </ScrollView>

</FrameLayout>