<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.AddNotaFragment"
    android:background="#9E9E9E">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/tituloNota"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etContenido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etTitulo"
            android:paddingTop="24dp"
            android:ems="10"
            android:hint="@string/contenidoNota"
            android:inputType="textMultiLine" />

            <ProgressBar
                android:id="@+id/progressBarAddNota"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_below="@id/etContenido"
                android:indeterminateTint="@color/colorPrimaryDark"
                android:visibility="gone" />

        <Button
            android:id="@+id/guardarNota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etContenido"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="64dp"
            android:text="@string/buttonGuardar" />


        </RelativeLayout>
    </ScrollView>

</FrameLayout>